--- a/olca-app-html/src/start_page/start_page_de.html
+++ b/olca-app-html/src/start_page/start_page_de.html
@@ -23,14 +23,14 @@
 	          </tr>
 	          <tr>
 	            <td>
-	              <p class="description">Open-Source-Hochleistungssoftware für Lebenszyklusanalysen und Nachhaltigkeitsbewertungen.</p>
-	              <p class="description">Frei verfügbar seit 2006. Erstellt und gewartet von GreenDelta, Berlin. <a onclick="callOpenUrl('http://www.greendelta.com')" target="blank" class="subtle-link">www.greendelta.com</a></p>
+	              <p class="description">Professionelle Open-Source für Lebenszyklusanalysen und Nachhaltigkeitsbewertungen.</p>
+	              <p class="description">Frei verfügbar seit 2006. Entwickelt und aktualisiert von GreenDelta, Berlin. <a onclick="callOpenUrl('http://www.greendelta.com')" target="blank" class="subtle-link">www.greendelta.com</a></p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Lizenziert unter der Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Was bedeuted das?</a>).</p>                  
+	              <p class="description">Lizenziert unter der Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Was bedeuted das?</a>).</p>
 	            </td>
 	          </tr>
 	        </tbody>
@@ -43,20 +43,21 @@
 	            <td>
 	              <h3><img src="images/news.gif"
 	                  alt="">Was ist neu?</h3>
-	              <p>Für die Version 1.4 haben wir openLCA komplett überarbeitet und verbessert. Einige der Verbesserungen sind:</p>
+	              <p>Für die Version 1.4 haben wir openLCA vollständig überarbeitet und verbessert. Einige der Verbesserungen sind:</p>
 	              <ul>
-	                <li><b>drastisch</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>höhere Leistung</b></a>, um ungefähr 400%</li>
+	                <li><b>stark</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>erhöhte Leistung</b></a>, um ca. 400%</li>
 	                <li><b>bedeutend</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>bessere Benutzbarkeit</b></a></li>
-	                <li><b>viele</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>neue Funktionen</b></a></li>
+	                <li><b>viele</b> <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default"><b>neue Funktionen</b></a></li>
 	              </ul>
+				  <p>Was ist neu in Version 1.4.1?</p>
 	            </td>
 	            <td>
 	              <h3><img src="images/getting-started.gif"
 	                  alt="">Kurzanleitung für Erstbenutzer</h3>
-	              <p>Wenn Sie openLCA zum ersten mal starten, sind noch keine Daten vorhanden.
-					Mit der neuen Version von openLCA ist es ab sofort besonders einfach, existierende Datenbanken aus zolca-Dateien zu importieren.
-					Die importierten Datenbaken lassen sich von der Navigation aus direkt durch einen Doppelklick öffnen.</p>
-	              <p>Das ist in einem <a onclick="callOpenUrl('http://www.openlca.org/videos')"
+	              <p>Wenn Sie openLCA zum ersten Mal starten sind noch keine Daten vorhanden.
+					Mit der neuen Version von openLCA ist es besonders einfach, existierende Datenbanken aus zolca-Dateien zu importieren.
+					Die importierten Datenbanken lassen sich von der Navigation aus direkt durch einen Doppelklick öffnen.</p>
+	              <p>Weitere openLCA-Grundfunktionen sind auch in einem <a onclick="callOpenUrl('https://www.youtube.com/watch?v=kEosW6PceVg')"
 	                  target="blank" class="btn btn-default">Video</a> erklärt.</p>
 	            </td>
 	          </tr>
@@ -64,36 +65,41 @@
 	            <td>
 	              <h3><img style="width: 61px; height: 54px;" src="images/search.gif"
 	                  alt="">Daten suchen und herunterladen</h3>
-	              <p>Eine Vielzahl an LCA Datenbanken ist im <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
+	              <p>Eine Vielzahl an LCA-Datenbanken ist in <a onclick="callOpenUrl('http://nexus.openlca.org')" target="blank"
 	                  class="btn btn-default">openLCA Nexus</a> vorhanden.
 	                  Dort können Sie nach einzelnen Datensätzen und kompletten Datenbanken suchen.
-	                  Alle hinterlegten Datenbanken sind mit openLCA kompatibel und können heruntergeladen geladen werden.
+	                  Alle hinterlegten Datenbanken sind mit openLCA kompatibel und können heruntergeladen werden.
 	                  Einzelne Datenbanken können zudem miteinander kombiniert werden.</p>
-	              <p>Wie Sie die Datenbanken herunterladen und mehr, ist in einem <a onclick="callOpenUrl('http://www.openlca.org/videos')"
+	              <p>Wie Sie Datenbanken und Wirkungsabschätzungsmethoden importieren können, ist in einem <a onclick="callOpenUrl('https://www.youtube.com/watch?v=FqVMbwhAEW4')"
 	                  target="blank" class="btn btn-default">Video</a> beschrieben.<br>
 	                LCIA-Methodenpakete erhalten Sie online in der <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
-	                  target="blank" class="btn btn-default">Download-Rubrik</a></p>
+	                  target="blank" class="btn btn-default">Download-Rubrik</a>.</p>
 	            </td>
 	            <td>
 	              <h3><img src="images/documentation.gif"
 	                  alt="">Hilfe und Anleitungen</h3>
-	              <p>Das Online-Wiki für openLCA enthält Details zu den meisten Funktionen von openLCA. Das Wiki wird für Sie überarbeitet und aktualisiert, so dass sich ein Besuch immer lohnt, wenn Sie auf der Suche nach aktuellsten Informationen und Beispielen sind.</p>
-	              <p>Neue Beispiele und Informationen zur Benutzung von openLCA finden Sie in unseren <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
-	                  class="btn btn-default">Nutzeranleitungen</a> die online frei zugänglich für Sie bereitgestellt werden.</p>
+	   	              <p>Neue Beispiele und Informationen zur Benutzung von openLCA finden Sie in unseren <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
+	                  class="btn btn-default">Nutzeranleitungen</a>, die online frei zugänglich für Sie bereitgestellt werden.</p>
+					  <p>Diese veranschaulichen die grundlegenden openLCA-Funktionen und bieten umfassende Informationen Themen für Fortgeschrittene.</p>
+					  <p>Schauen Sie sich auch unsere <a onclick="callOpenUrl('https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w')"
+	                  target="blank" class="btn btn-default">Lehr-Videos</a> an, die verschiedene Themen anhand von Beispielen erklären.<p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <h3><img src="images/examples.gif"
-	                  alt="">Beispiele</h3>
-	              <p>Hier finden Sie einige Fallstudien für openLCA:</p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_3')" target="blank" class="btn btn-default">Fallstudien für Version 1.3</a></p>
-	              <p><a onclick="callOpenUrl('http://www.openlca.org/case_studies#1_4')" target="blank" class="btn btn-default">Fallstudien für Version 1.4</a></p>
+	                  alt="">Fallstudien</h3>
+	              <p>Zum lernen und entdecken stehen Ihnen einige <a onclick="callOpenUrl('http://www.openlca.org/case_studies')"
+	                  target="blank" class="btn btn-default">openLCA-Fallstudien</a> für Versionen 1.3 und 1.4 bereit.</p>
+					  <p>Diese wurden zu Lernzwecken entwickelt und
+                     zeigen Ihnen wie Sie theoretische Beispiele Schritt für Schritt modellieren können.</p>
 	            </td>
 	            <td>
 	              <h3><img src="images/community.gif"
 	                  alt="">Nutzergemeinschaft</h3>
-	              <p>openLCA erfreut sich über eine stetig wachsende Zahl an Nutzern. Registrieren auch Sie sich in unserem <a
+	              <p>openLCA erfreut sich über eine stetig wachsende Zahl an Nutzern. Erfahren Sie mehr über das openLCA-Netzwerk <a onclick="callOpenUrl('http://www.openlca.org/network')"
+	                  target="blank" class="btn btn-default">hier</a>.<p>
+						<p>Registrieren auch Sie sich in unserem <a
 	                  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">Forum</a>, um von den Vorteilen zu profitieren.
 	                  Teilen Sie Ihre Meinungen, stellen Sie Fragen, lesen Sie Antworten und tragen Sie dazu bei, openLCA noch besser zu gestalten.</p>
 	            </td>
@@ -106,38 +112,7 @@
         <script src="libs/jquery.min.js"></script>
         <script src="libs/angular.min.js"></script>
         <script type="text/javascript">
-            $(document).ready(function() {
-                $('#gd-logo').on('click', function() {
-                    callOpenUrl('http://www.greendelta.com');
-                });
-            });
-
-            var app = angular.module('StartPage', []);
-
-            var Controller = function ($scope) {
-                $scope.data = {};
-            	//setData({'version' : '1.4' });
-            };
-	        app.controller('Controller', Controller);
-
-           function setData(data) {
-                var element = document.getElementById("contentDiv");
-                var scope = angular.element(element).scope();
-                scope.$apply(function () {
-                    scope.data = data;
-                });
-            }
-
-            // the functions openUrl and importDatabase should be registered by the 
-            // host editor in openLCA
-
-            function callOpenUrl(url) {
-                if(typeof(openUrl) === "function") {
-                    openUrl(url);
-                } else {
-                    window.open(url);
-                }
-            }
-       </script>
+        //@include('./start_page.js')
+        </script>
   </body>
 </html>
