updated layout in German start page

--- a/olca-app-html/src/start_page/start_page_bg.html
+++ b/olca-app-html/src/start_page/start_page_bg.html
@@ -49,9 +49,9 @@
 						<p>Във версия 1.4 ние напълно преработихме и "преструктурирахме"
 						  openLCA. Резултатите се състоят в:</p>
 						<ul>
-						  <li><b>драстично</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>подобряване на производителността </b></a> с приблизително 400%</li>
-						  <li><b>множество</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>подобрения по отношение на използваемостта</b></a></li>
-						  <li><b>много</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>нови функции.</b></a></li>
+						  <li>драстично <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">подобряване на производителността </a> с приблизително 400%</li>
+						  <li>множество <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">подобрения по отношение на използваемостта</a></li>
+						  <li>много <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">нови функции.</a></li>
 						</ul>
 					</div>
 	            </td>
