--- a/olca-app-html/src/start_page/start_page_es.html
+++ b/olca-app-html/src/start_page/start_page_es.html
@@ -46,9 +46,9 @@
 	              <p>Para la versión 1.4 hemos rediseñado y "renovado" completamente
 	                openLCA. Los resultados son:</p>
 	              <ul>
-	                <li><b>drástico</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>incremento del rendimiento</b></a> de alrededor del 400%</li>
-	                <li><b>numerosas</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>mejoras de uso</b></a></li>
-	                <li><b>muchas</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>nuevas funcionalidades</b></a></li>
+	                <li>drástico <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">incremento del rendimiento</a> de alrededor del 400%</li>
+	                <li>numerosas <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">mejoras de uso</a></li>
+	                <li>muchas <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nuevas funcionalidades</a></li>
 	              </ul>
 	            </td>
 	            <td>
