--- a/olca-app-html/src/start_page/start_page_fr.html
+++ b/olca-app-html/src/start_page/start_page_fr.html
@@ -45,9 +45,9 @@
 	                  alt="">Quoi de neuf ?</h3>
 	              <p>Pour la version 1.4, nous avons complètement redessiné et "rénové" openLCA. Résultat :</p>
 	              <ul>
-	                <li>des performances <b>drastiquement</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>améliorées</b></a>, jusqu'à 400%</li>
-	                <li><b>de nombreuses</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>améliorations pour vous faciliter la vie</b></a></li>
-	                <li><b>beaucoup de</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>nouvelles fonctionnalités</b></a></li>
+	                <li>des performances drastiquement <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">améliorées</a>, jusqu'à 400%</li>
+	                <li>de nombreuses <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">améliorations pour vous faciliter la vie</a></li>
+	                <li>beaucoup de <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nouvelles fonctionnalités</a></li>
 	              </ul>
 	            </td>
 	            <td>
