--- a/olca-app-html/src/start_page/start_page_it.html
+++ b/olca-app-html/src/start_page/start_page_it.html
@@ -46,9 +46,9 @@
 	              <p>Per la versione 1.4 abbiamo completamente riprogettato e "ristrutturato"
 	                openLCA. I risultati consistono in:</p>
 	              <ul>
-	                <li><b>un drastico</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>miglioramento delle prestazioni di calcolo</b></a> (circa il 400%!)</li>
-	                <li><b>numerosi</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>miglioramenti in termini di usabilità</b></a></li>
-	                <li><b>alcune</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>nuove funzioni</b></a></li>
+	                <li>un drastico <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">miglioramento delle prestazioni di calcolo</a> (circa il 400%!)</li>
+	                <li>numerosi <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">miglioramenti in termini di usabilità</a></li>
+	                <li>alcune <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nuove funzioni</a></li>
 	              </ul>
 	            </td>
 	            <td>
