--- a/olca-app-html/src/start_page/start_page_zh.html
+++ b/olca-app-html/src/start_page/start_page_zh.html
@@ -45,9 +45,9 @@
 	                  alt="">有什么新鲜事</h3>
 	              <p>为版本 1.4, 完全重新设计:</p>
 	              <ul>
-	                <li><b>彻底地</b> <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default"><b>改良性能</b></a> 约 400%</li>
-	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default"><b>可用性改进</b></a></li>
-	                <li><b>许多</b> <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default"><b>新特点</b></a></li>
+	                <li>彻底地 <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">改良性能</a> 约 400%</li>
+	                <li>许多 <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">可用性改进</a></li>
+	                <li>许多 <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">新特点</a></li>
 	              </ul>
 	            </td>
 	            <td>
