updated links in start pages

--- a/olca-app-html/src/start_page/start_page.html
+++ b/olca-app-html/src/start_page/start_page.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Licensed under the Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">what does this mean?</a>).</p>
+	              <p class="description">Licensed under the Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">what does this mean?</a>)</p>
 				</td>                  
 	          </tr>
 	        </tbody>
@@ -53,7 +53,7 @@
 						  <li>numerous <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">usability improvements</a></li>
 						  <li>many <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">new features</a></li>
 						</ul>
-						<p>What's new in version 1.4.1? Find out here.</p>
+						<p>What's new in version 1.4.1? Find out <a onclick="callOpenUrl('http://www.openlca.org/news#New_1_4_1')" class="btn btn-default">here</a>.</p>
 					</div>
 	            </td>
 				
@@ -119,7 +119,7 @@
 	                  alt="">Community</h3>
 					<div class="section_content">
 						<p>An increasing number of people are using openLCA. Find out more about the openLCA network and its users <a
-							onclick="callOpenUrl('http://www.openlca.org/openlca-users')" target="blank" class="btn btn-default">here</a>.</p>
+							onclick="callOpenUrl('http://www.openlca.org/network')" target="blank" class="btn btn-default">here</a>.</p>
 						<p>Register in the <a
 							onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">forum</a> to share your thoughts, ask questions, read answers and participate in the community.</p>
 					</div>
