--- a/olca-app-html/src/start_page/start_page_bg.html
+++ b/olca-app-html/src/start_page/start_page_bg.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Лицензиран от Mozilla Public License  (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">какво означава това?</a>).</p>                  
+	              <p class="description">Лицензиран от Mozilla Public License  (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">какво означава това?</a>)</p>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -51,7 +51,7 @@
 						<ul>
 						  <li>драстично <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">подобряване на производителността </a> с приблизително 400%</li>
 						  <li>множество <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">подобрения по отношение на използваемостта</a></li>
-						  <li>много <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">нови функции.</a></li>
+						  <li>много <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">нови функции.</a></li>
 						</ul>
 					</div>
 	            </td>
@@ -122,7 +122,7 @@
 	                  alt="">Общност</h3>
 					<div class="section_content">
 						<p>Все повече и повече хора използват openLCA. Регистрирайте се във  <a
-						  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">форума</a> , за да споделите мисли и идеи, да зададете въпроси и прочетете отговорите, да се присъедините към общността.</p>
+						  onclick="callOpenUrl('http://www.openlca.org/forum')" target="blank" class="btn btn-default">форума</a>, за да споделите мисли и идеи, да зададете въпроси и прочетете отговорите, да се присъедините към общността.</p>
 					</div>
 	            </td>
 				
