--- a/olca-app-html/src/start_page/start_page_de.html
+++ b/olca-app-html/src/start_page/start_page_de.html
@@ -23,14 +23,14 @@
 	          </tr>
 	          <tr>
 	            <td>
-	              <p class="description">Professionelle Open-Source für Lebenszyklusanalysen und Nachhaltigkeitsbewertungen.</p>
+	              <p class="description">Professionelle Open-Source-Software für Lebenszyklusanalysen und Nachhaltigkeitsbewertungen.</p>
 	              <p class="description">Frei verfügbar seit 2006. Entwickelt und aktualisiert von GreenDelta, Berlin. <a onclick="callOpenUrl('http://www.greendelta.com')" target="blank" class="subtle-link">www.greendelta.com</a></p>
 	            </td>
 	          </tr>
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Lizenziert unter der Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Was bedeuted das?</a>).</p>
+	              <p class="description">Lizenziert unter der Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Was bedeuted das?</a>)</p>
 	            </td>
 	          </tr>
 	        </tbody>
@@ -52,7 +52,7 @@
 						  <li>bedeutend <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">bessere Benutzbarkeit</a></li>
 						  <li>viele <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">neue Funktionen</a></li>
 						</ul>
-						<p>Was ist neu in Version 1.4.1?</p>
+						<p>Was ist neu in <a onclick="callOpenUrl('http://www.openlca.org/news#New_1_4_1')" class="btn btn-default">Version 1.4.1</a>?</p>
 					</div>
 	            </td>
 				
@@ -60,10 +60,10 @@
 	              <h3 style="color: rgb(128,0,128)"><img src="images/getting_started_32.png"
 	                  alt="">Kurzanleitung für Erstbenutzer</h3>
 					<div class="section_content">
-						<p>Wenn Sie openLCA zum ersten Mal starten sind noch keine Daten vorhanden.
+						<p>Wenn Sie openLCA zum ersten Mal starten, sind noch keine Daten vorhanden.
 						Mit der neuen Version von openLCA ist es besonders einfach, existierende Datenbanken aus zolca-Dateien zu importieren.
 						Die importierten Datenbanken lassen sich von der Navigation aus direkt durch einen Doppelklick öffnen.</p>
-					  <p>Weitere openLCA-Grundfunktionen sind auch in einem <a onclick="callOpenUrl('https://www.youtube.com/watch?v=kEosW6PceVg')"
+					  <p>Weitere Grundfunktionen sind auch in einem <a onclick="callOpenUrl('https://www.youtube.com/watch?v=kEosW6PceVg')"
 						  target="blank" class="btn btn-default">Video</a> erklärt.</p>
 					</div>
 	            </td>
@@ -81,8 +81,8 @@
 							Alle hinterlegten Datenbanken sind mit openLCA kompatibel und können heruntergeladen werden.
 							Einzelne Datenbanken können zudem miteinander kombiniert werden.</p>
 						<p>Wie Sie Datenbanken und Wirkungsabschätzungsmethoden importieren können, ist in einem <a onclick="callOpenUrl('https://www.youtube.com/watch?v=FqVMbwhAEW4')"
-							target="blank" class="btn btn-default">Video</a> beschrieben.<br>
-						  LCIA-Methodenpakete erhalten Sie online in der <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
+							target="blank" class="btn btn-default">Video</a> beschrieben.</p>
+						<p>LCIA-Methodenpakete erhalten Sie online in der <a onclick="callOpenUrl('http://www.openlca.org/downloads')"
 							target="blank" class="btn btn-default">Download-Rubrik</a>.</p>
 					</div>
 				</td>
@@ -93,7 +93,7 @@
 					<div class="section_content">
 						<p>Neue Beispiele und Informationen zur Benutzung von openLCA finden Sie in unseren <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
 						class="btn btn-default">Nutzeranleitungen</a>, die online frei zugänglich für Sie bereitgestellt werden.</p>
-						<p>Diese veranschaulichen die grundlegenden openLCA-Funktionen und bieten umfassende Informationen Themen für Fortgeschrittene.</p>
+						<p>Diese veranschaulichen die grundlegenden openLCA-Funktionen und bieten umfassende Informationen zu Themen für Fortgeschrittene.</p>
 						<p>Schauen Sie sich auch unsere <a onclick="callOpenUrl('https://www.youtube.com/channel/UCGiahq1YZWK4pRXDVXuIi6w')"
 						target="blank" class="btn btn-default">Lehr-Videos</a> an, die verschiedene Themen anhand von Beispielen erklären.<p>
 					</div>
@@ -106,10 +106,10 @@
 	              <h3 style="color: rgb(112,187,40)"><img src="images/case_studies_32.png"
 	                  alt="">Fallstudien</h3>
 					<div class="section_content">
-						<p>Zum lernen und entdecken stehen Ihnen einige <a onclick="callOpenUrl('http://www.openlca.org/case_studies')"
-							target="blank" class="btn btn-default">openLCA-Fallstudien</a> für Versionen 1.3 und 1.4 bereit.</p>
+						<p>Zum Lernen und Entdecken stehen Ihnen einige <a onclick="callOpenUrl('http://www.openlca.org/case_studies')"
+							target="blank" class="btn btn-default">openLCA-Fallstudien</a> für die Versionen 1.3 und 1.4 bereit.</p>
 							<p>Diese wurden zu Lernzwecken entwickelt und
-						   zeigen Ihnen wie Sie theoretische Beispiele Schritt für Schritt modellieren können.</p>
+						   zeigen Ihnen, wie Sie Beispiele Schritt für Schritt modellieren können.</p>
 					</div>
 	            </td>
 				
