--- a/olca-app-html/src/start_page/start_page_es.html
+++ b/olca-app-html/src/start_page/start_page_es.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Licenciado bajo la Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">¿qué significa esto?</a>).</p>                  
+	              <p class="description">Licenciado bajo la Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">¿qué significa esto?</a>)</p>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -51,7 +51,7 @@
 					  <ul>
 						<li>drástico <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">incremento del rendimiento</a> de alrededor del 400%</li>
 						<li>numerosas <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">mejoras de uso</a></li>
-						<li>muchas <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nuevas funcionalidades</a></li>
+						<li>muchas <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">nuevas funcionalidades</a></li>
 					  </ul>
 					</div>
 	            </td>
