--- a/olca-app-html/src/start_page/start_page_it.html
+++ b/olca-app-html/src/start_page/start_page_it.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Licenziato tramite Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Cosa significa?</a>).</p>                  
+	              <p class="description">Licenziato tramite Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">Cosa significa?</a>)</p>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -51,7 +51,7 @@
 						<ul>
 						  <li>un drastico <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">miglioramento delle prestazioni di calcolo</a> (circa il 400%!)</li>
 						  <li>numerosi <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">miglioramenti in termini di usabilità</a></li>
-						  <li>alcune <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nuove funzioni</a></li>
+						  <li>alcune <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">nuove funzioni</a></li>
 						</ul>
 					</div>
 	            </td>
