--- a/olca-app-html/src/start_page/start_page_zh.html
+++ b/olca-app-html/src/start_page/start_page_zh.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">许可证: Mozilla Public License (<a onclick="callOpenUrl('www.openlca.org/open-source')" target="blank" class="btn btn-default">是什么意思?</a>).</p>                  
+	              <p class="description">许可证: Mozilla Public License (<a onclick="callOpenUrl('www.openlca.org/open-source')" target="blank" class="btn btn-default">是什么意思?</a>)</p>                  
 	            </td>
 	          </tr>
 	        </tbody>
@@ -50,7 +50,7 @@
 						<ul>
 						  <li>彻底地 <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">改良性能</a> 约 400%</li>
 						  <li>许多 <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">可用性改进</a></li>
-						  <li>许多 <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">新特点</a></li>
+						  <li>许多 <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">新特点</a></li>
 						</ul>
 					</div>
 	            </td>
