--- a/olca-app-html/src/start_page/start_page_fr.html
+++ b/olca-app-html/src/start_page/start_page_fr.html
@@ -30,7 +30,7 @@
 	          <tr>
 	            <td>
 	              <div id="gd-logo"></div>
-	              <p class="description">Publié sous licence Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">qu'est-ce que ça veut dire ?</a>).</p>
+	              <p class="description">Publié sous licence Mozilla Public License (<a onclick="callOpenUrl('http://www.openlca.org/open-source')" target="blank" class="btn btn-default">qu'est-ce que ça veut dire ?</a>)</p>
 				</td>                  
 	          </tr>
 	        </tbody>
@@ -50,7 +50,7 @@
 						<ul>
 						  <li>des performances drastiquement <a onclick="callOpenUrl('http://www.openlca.org/performance')" class="btn btn-default">améliorées</a>, jusqu'à 400%</li>
 						  <li>de nombreuses <a onclick="callOpenUrl('http://www.openlca.org/features#usability')" class="btn btn-default">améliorations pour vous faciliter la vie</a></li>
-						  <li>beaucoup de <a onclick="callOpenUrl('http://www.openlca.org/features#overview1.4')"  class="btn btn-default">nouvelles fonctionnalités</a></li>
+						  <li>beaucoup de <a onclick="callOpenUrl('http://www.openlca.org/features_overview')"  class="btn btn-default">nouvelles fonctionnalités</a></li>
 						</ul>
 					</div>
 	            </td>
@@ -95,7 +95,7 @@
 	                  alt="">Manuels d'utilisation</h3>
 					<div class="section_content">
 						<p>Le wiki d'openLCA décrit la plupart des fonctionnalités d'openLCA. 
-						  Il évolue régulièrement, aussi pensez à y revenir de temps en temps !.</p>
+						  Il évolue régulièrement, aussi pensez à y revenir de temps en temps!</p>
 						<p>De nouveaux <a onclick="callOpenUrl('http://www.openlca.org/manuals')" target="blank"
 							class="btn btn-default">manuels</a> d'introduction et plus complets sont également disponibles en ligne.</p>
 				  </div>
