--- a/olca-app-html/src/start_page/start_page_de.html
+++ b/olca-app-html/src/start_page/start_page_de.html
@@ -12,7 +12,7 @@
   <body style="background-color: rgb(243, 243, 243)">
 	<div id="contentDiv" data-ng-controller="Controller">
 	    <div class="page-header">
-	      <table style="width: 100%;" border="0">
+	      <table style="width: 100%;">
 	        <tbody>
 	          <tr>
 	            <td id="logo-cell">
@@ -38,7 +38,13 @@
 	    </div>
 		
 	    <div id="navigation-section" class="container-fluid" style="margin: 20px;">
-	      <table>
+	      <table style="width: 100%">
+			  <thead>
+				  <tr>
+					  <th  style="width: 50%"></th>
+					  <th  style="width: 50%"></th>
+				  </tr>
+			  </thead>
 	        <tbody>
 	          <tr>
 				  
