use new icons in usage view

--- a/olca-app-html/src/usages_view.html
+++ b/olca-app-html/src/usages_view.html
@@ -144,31 +144,31 @@
         // get the image for the
         function getImage(descriptor) {
             if (descriptor.type === 'PROJECT')
-                return 'images/project_obj.gif';
+                return 'images/project.png';
             if (descriptor.type === 'IMPACT_METHOD')
-                return 'images/LCIA_obj.gif';
+                return 'images/impact_method.png';
             if (descriptor.type === 'PROCESS')
-                return 'images/proc_obj.gif';
+                return 'images/process.png';
             if (descriptor.type === 'FLOW')
-                return 'images/flow_obj.gif';
+                return 'images/flow.png';
             if (descriptor.type === 'FLOW_PROPERTY')
-                return 'images/flowprop_obj.gif';
+                return 'images/flow_property.png';
             if (descriptor.type === 'UNIT_GROUP')
-                return 'images/unitgroup_obj.gif';
+                return 'images/unit_group.png';
             if (descriptor.type === 'ACTOR')
-                return 'images/actor_obj.gif';
+                return 'images/actor.png';
             if (descriptor.type === 'SOURCE')
-                return 'images/source_obj.gif';
+                return 'images/source.png';
             if (descriptor.type === 'PRODUCT_SYSTEM')
-                return 'images/system_obj.gif';
+                return 'images/product_system.png';
             if (descriptor.type === 'PARAMETER')
-                return 'images/formula_16.png';
+                return 'images/parameter.png';
             if (descriptor.type === 'LOCATION')
                 return 'images/location.png';
             if (descriptor.type === 'SOCIAL_INDICATOR')
-                return 'images/indicator.png';
+                return 'images/social_indicator.png';
             if (descriptor.type === 'CURRENCY')
-                return 'images/currency_obj.png';        
+                return 'images/currency.png';        
         }
     </script>
 
